style(ui): fix copy icon not visible on chromium

--- a/ui/src/css/main.css
+++ b/ui/src/css/main.css
@@ -73,12 +73,12 @@ body {
   opacity: 0.7;
 }
 
-.button.copy:before {
-  content: "⿻ Copy";
+.button.copy:after {
+  content: "Copy";
 }
 
-.button.copy.active:before {
-  content: "⿻ Copied ✓";
+.button.copy.active:after {
+  content: "Copied ✓";
 }
 
 .button.copy.active {
